2004-05-16 07:20 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormSoundEditor.m: Added methods to GormSound class to 
	show the "not applicable" inspector on all options but the
	attributes inspector.
	* GormImageEditor.m: same as above for GormImage.
	* GormInspectorsManager.m: Added code to show "Sound Inspector"
	or "Image Inspector" when appropriate for either GormSound or
	GormImage respectively.
	
2004-05-15 23:14 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormImageInspector.gorm: Repositioned fields.
	
2004-05-15 16:19 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormDocument.m: [GormDocument init] changed initialization
	of scrollviews to allow horizontal scroller to be used.
	* GormImageInspector.gorm: resized some of the fields which
	were too short.
	
2004-05-15 12:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormFunctions.[hm]: added function to get all system sounds.
	NOTE: Current there aren't any, but why wait?  I'm assuming
	that they'll go into $GNUSTEP_SYSTEM_ROOT/Library/Sounds.
	* GormSoundEditor.m: Added call to add all system sounds
	to the editor.
	
2004-05-15 11:14 Gregory John Casamento <greg_casamento@yahoo.com>

	* Gorm.m: Add call to [GormDocument closeAllEditors] to 
	avoid a crash when the user attempts to open a document, then
	cancels.   The document wasn't properly released.
	* GormDocument.h: Removed the images and sounds arrays.  This
	information is kept in the editor and these arrays are redundant.
	Also exposed the closeAllEditors method.
	* GormDocument.m: Removed references to the images and sounds
	array.  Changed load/save logic to use the list from the editors
	themselves.
	* GormFunctions.[hm]: Added function to retrieve the names of the
	images from the system directory named systemImagesList().
	* GormImageEditor.m: Modified to call the new function and add the
	images to the editor when it is first instantiated.